# SmartCalc-v1.0

./: .gitignore  README.md
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  calculator  cmake_install.cmake  qt  qtcsettings.cmake
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-340bf5ab4ffe8d069d18.json  cache-v2-8289da860b666b6ed17f.json  cache-v2-c96230aa5aa727a349ea.json  cmakeFiles-v1-4149dafef35ff00bd309.json  cmakeFiles-v1-91b4818079b23b49b6e2.json  cmakeFiles-v1-cb22e6f555c9ee330d57.json  codemodel-v2-8b5b43d66870d34e59f2.json  codemodel-v2-e8e8e1b4655a2f483155.json  codemodel-v2-f77b4c00ce542190888d.json  directory-.-Debug-0d232ab106251fb0bbf6.json  index-2024-02-12T10-10-22-0684.json  index-2024-02-18T09-27-39-0294.json  index-2024-02-18T15-56-14-0543.json  target-calculator-Debug-0333a4fcf02eb10a3d1c.json  target-calculator-Debug-2684c3806a7b66234e49.json  target-calculator-Debug-2765220cb81b1de0ae79.json  (+2 more)
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/calculator_autogen/: deps  mocs_compilation.cpp
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/calculator_autogen/EIXI6URBL5/: moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/calculator_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/calculator_autogen/include/: ui_mainwindow.h
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/qt_autogen/: deps
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/qt_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-calculator-Desktop_Qt_6_6_1_GCC_64bit-Debug/qt_autogen/include/: ui_mainwindow.h
calculator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: Makefile  calculation.c  calculation.h  credit.c  credit.h  main.c  parser.c  parser.h  parser.h.gch  stack.c  stack.h
(+580 files in other folders)
